# arrow

.github/workflows/: rust.yml
ci/docker/: debian-10-rust.dockerfile
dev/release/: 00-prepare-test.rb
rust/: Cargo.toml
rust/arrow/src/array/: array.rs  data.rs
rust/bench_helper/: Cargo.toml  README.md
rust/bench_helper/src/: alloc.rs  lib.rs  perf.rs
rust/datafusion/src/: dataframe.rs
rust/datafusion/src/execution/: context.rs  dataframe_impl.rs
rust/datafusion/src/logical_plan/: builder.rs  mod.rs  plan.rs
rust/datafusion/src/optimizer/: constant_folding.rs  limit_push_down.rs  projection_push_down.rs  utils.rs
rust/datafusion/src/physical_plan/: planner.rs
rust/datafusion/src/sql/: planner.rs
rust/parquet/: Cargo.toml
rust/parquet/benches/: common.rs  compression.rs  datatype_codecs.rs  reader.rs
rust/parquet/src/: basic.rs  data_type.rs
rust/parquet/src/column/: writer.rs
rust/parquet/src/encodings/: decoding.rs  encoding.rs
rust/parquet/src/file/: statistics.rs
rust/parquet/src/util/: bit_util.rs  memory.rs
rust/parquet/src/util/test_common/: rand_gen.rs
